updated login and createuser styles, fixed inputs covering background image, fixed cursor in text editor not showing at bottom of screen and cut off by left

--- a/src/styles/CustomCM.css
+++ b/src/styles/CustomCM.css
@@ -74,3 +74,8 @@
 .CodeMirror-scroll {
   overflow: hidden !important;
 }
+
+.CodeMirror-lines {
+  margin-bottom: 20px; /*adds space for triangle on the bottom of the editor*/
+  padding-left: 3px; /*adds space for triangle on the left of the editor*/
+}
